# webscrapping

./: LICENSE  pyproject.toml
class1/: 1a Web scraping basics and html.ipynb  1b Web scraping basics with regular expression.ipynb
class2/Class Exercises/: 1.ipynb  2.ipynb  2a Web Scraping basics with Wikipedia.ipynb  2b Wiki_Natural_Disasters.ipynb  3.ipynb  4.ipynb  Exercises Solutions.ipynb  nyt_article_titles.csv
class2/Demo Workbooks/: 2b Wiki_Natural_Disasters.ipynb  france_wikipedia_data.csv
class2/Mini Wikipedia Project/: ESILV-MS-A5-PAR-ST-CSDS.xlsx
practice/: bookscrape.ipynb
